--- a/01/index.html
+++ b/01/index.html
@@ -6,26 +6,36 @@
     <!--스타일시트-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle:wght@300&family=Gowun+Dodum&family=Gugi&family=Yeon+Sung&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle:wght@300&family=Gaegu:wght@300;400&family=Gowun+Dodum&family=Gugi&family=Hi+Melody&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" bref="./style.css">
   <title>JS PWA</title>
+  <head>
+    <!-- 자바 스크립트 -->
+    <!-- 위치1-->
+    <script = src="/script/index.js">
+    //alert("Hello World!");
+    //console.log("Hello World");   
+    </script>
 </head>
-<bodt>
+<body>
   <div id="root">
     <header>
-      <h1>자바스크립트</h1>
+      <h1>자바스크립트 연습</h1>
     </header>
+    <!-- 여기도 가능 -->
     <main id="content">
       <section id="bt">
-        <button class="bt1">버튼1</button><br>
-        <button class="bt1">버튼2</button><br>
-        <button class="bt1">버튼3</button><br>
-        <button class="bt2">버튼4</button><br>
-        <button class="bt2">버튼5</button><br>
+        <button class="bt1" onclick="funprint(1);">버튼1</button>
+        <button class="bt1" onclick="funprint(2);">버튼2</button>
       </section>
     </main>
   </div>
+<!-- 여기도가능 
+  <script>
+    
+    alert("Hello World!");
+  </script> -->
 </body>
 </html>
 
