DOM,let,const,반복문

--- a/01/index.html
+++ b/01/index.html
@@ -6,14 +6,14 @@
     <!--스타일시트-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle:wght@300&family=Gaegu:wght@300;400&family=Gowun+Dodum&family=Gugi&family=Hi+Melody&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle:wght@300&family=Gaegu:wght@300;400&family=Gowun+Dodum&family=Gugi&family=Nanum+Brush+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" bref="./style.css">
   <title>JS PWA</title>
   <head>
     <!-- 자바 스크립트 -->
     <!-- 위치1-->
-    <script = src="/script/index.js">
+    <script = src="./script/index.js">
     //alert("Hello World!");
     //console.log("Hello World");   
     </script>
