--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--스타일시트-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle:wght@300&family=Gowun+Dodum&family=Gugi&family=Yeon+Sung&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle:wght@300&family=Gaegu:wght@300;400&family=Gowun+Dodum&family=Gugi&family=Nanum+Brush+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" bref="./style.css">
   <title>JS PWA</title>
