0928일 DOM,주사위출력

--- a/01/index.html
+++ b/01/index.html
@@ -13,7 +13,8 @@
   <head>
     <!-- 자바 스크립트 -->
     <!-- 위치1-->
-    <script = src="./script/index.js">
+    <!--<script = src="./script/index.js"> -->
+    <script = src="./script/dom.js">
     //alert("Hello World!");
     //console.log("Hello World");   
     </script>
@@ -25,9 +26,24 @@
     </header>
     <!-- 여기도 가능 -->
     <main id="content">
+      <section id="msg">
+        <section id="formSection">
+          <input type="checkbox" id="ex1" name="ex[1]" value="1">
+          
+
+          
+        </section>
+       <!-- 
+       <div class="divmsg"></div>
+       <div class="divmsg"></div>
+       <div class="divmsg"></div>
+                                   -->
+
+      </section>
       <section id="bt">
-        <button class="bt1" onclick="funprint(1);">버튼1</button>
-        <button class="bt1" onclick="funprint(2);">버튼2</button>
+        <img src=./ alt="">
+        <button class="bt1" onclick="show()">확인</button>
+
       </section>
     </main>
   </div>
